# Digital-Promise-PRISM

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: field_definitions.yaml
prism/: airtable_client.py  extractors.py  field_processor.py  main.py  pdf_loader.py  status.py  webhook_client.py
setup/: linux_mac_setup.command  windows_setup.bat
tests/: conftest.py  test_airtable_client.py  test_field_processor.py  test_pdf_loader.py  test_webhook_client.py
